--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,8 +1,8 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: Pea&Pig
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description: Pea&Pig 总是很开心
 
 
 #-------------------------------
