--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,9 +8,9 @@ description: Pea&Pig 总是很开心
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
+  name: wanglongke
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
+  say-hello: Hello, I’m <strong>Longke Wang</strong>
   bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
 
 
