--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@
 # General Site Settings
 title: Pea&Pig
 logo: logo.svg # You can add own logo.
-description: Pea&Pig 总是很开心
+description: Pea&Pig are always happy
 
 
 #-------------------------------
