--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ description: Pea&Pig are always happy
 author:
   name: wanglongke
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Longke Wang</strong>
+  say-hello: Hello, I’m <strong>Wang Longke</strong>
   bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
 
 
