--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,17 +10,18 @@ description: Pea&Pig are always happy
 author:
   name: wanglongke
   image: 01.jpg
-  say-hello: <center><strong>Wang Longke</strong><center>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
+  say-hello: <center><strong>Wang Longke</strong></center>
+  bio: 我是一名算法工程师，在大连理工大学数学科学学院（https://www.dlut.edu.cn/）拿到了学士与硕士学位，所学专业为<strong>计算数学</strong>. 
+  主要研究方向为物理仿真与渲染，三维曲面重建，数字化人体表达。
 
 
 #-------------------------------
 # Contact links
-twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
-pinterest: https://pinterest.com/ # Add your Pinterest handle
+# twitter: https://twitter.com/ # Add your Twitter handle
+# facebook: https://facebook.com/ # Add your Facebook handle
+# dribbble: https://dribbble.com/ # Add your Dribbble handle
+# instagram: https://instagram.com/ # Add your Instagram handle
+# pinterest: https://pinterest.com/ # Add your Pinterest handle
 
 
 #-------------------------------
