--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ description: Pea&Pig are always happy.
 author:
   name: Pea&Pig
   image: 01.jpg
-  say-hello: <center><strong>Wang Longke</strong></center>
+  say-hello: <center><strong>Pea&Pig</strong></center>
   bio: 我是一名算法工程师，在<a href="https://www.dlut.edu.cn/">大连理工大学</a>-<a href="http://math.dlut.edu.cn/">数学科学学院</a>拿到了学士与硕士学位，所学专业为<strong>计算数学</strong>. 主要研究方向为<strong>物理仿真与渲染</strong>，<strong>三维曲面重建</strong>，<strong>数字化人体表达</strong>。
 
 
